docs : 공부해야 하는 개념 template 변경

--- a/공부해야 하는 개념.md
+++ b/공부해야 하는 개념.md
@@ -1,12 +1,31 @@
-### 9월
-#### 240920 (금)
-- mod security log json 형식으로 저장에 필요한 yazl
-	- git clone과 wget tar로 설치했을 때 전자는 됐고 후자는 안됐던 이유?
-	- mod security에서 yazl을 사용하기 위해 해줬던 과정들 정리 필요
-- rabbitMQ 원리, 필요했던 이유, 다른 방법이 또 있을지
-- logstash 원리
-	- 개발 언어? 로그에 jdk가 보였음
-	- config는 어떤 문법을 따르는지
-- mysql trigger 연동
-- 다시 돌아온 CORS -  개념 정리, 프론트 / 백엔드 설정 방법 비교
-	- 이제는 미룰 수 없다잉!
+## 📅 9월
+### 📆 240920 (금)
+<details>
+<summary>내용 보기 / 접기</summary>
+
+#### 1. [[YAZL]]
+- `git clone`과 `wget tar`로 설치 시 차이점
+  - 전자는 성공, 후자는 실패: 이유는 무엇일까?
+- **ModSecurity**에서 YAZL 사용 과정 정리
+  - 설치 과정
+  - 라이브러리 링킹 방법
+
+#### 2. RabbitMQ
+- **원리**: RabbitMQ의 동작 방식
+- **필요성**: 프로젝트에서 RabbitMQ가 필요했던 이유
+- **대안**: RabbitMQ 외에 가능한 다른 방법은?
+
+#### 3. Logstash
+- **개발 언어**: Logstash는 어떤 언어로 개발되었는가? 로그에서 **JDK**가 보였던 이유는?
+- **Config 문법**: Logstash 설정 파일의 문법은 무엇을 따르는가?
+
+#### 4. MySQL Trigger
+- 트리거에 대한 개념 및 사용법
+
+#### 5. 다시 돌아온 CORS
+- **CORS 개념 정리**: CORS란 무엇인가?
+- **프론트엔드 vs 백엔드 설정 방법 비교**
+  - 프론트엔드에서의 CORS 설정
+  - 백엔드에서의 CORS 설정
+
+</details>
