--- a/공부해야 하는 개념.md
+++ b/공부해야 하는 개념.md
@@ -1,4 +1,17 @@
 ## 📅 9월
+
+### 📆 240923 (월)
+엘라스틱서치가 로그 저장소로 자주 쓰이는 이유
+- 왜 빠른걸까? 
+네트워크를 이용한 push 방식과 파일을 이용한 push 방식
+Polling vs Scrap vs Push([📰](https://jominseoo.tistory.com/76#1.2%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%88%98%EC%A7%91%20Architecture-1))
+프로메테우스 뿌개기
+querydsl 설정해줄 때 왜 방법 차이가 있는지
+[안되는 링크](https://binco.tistory.com/entry/QueryDSL-%EC%A0%81%EC%9A%A9-%EC%98%88%EC%A0%9C%EC%8B%9C%EB%A6%AC%EC%A6%88)
+[되는 링크](https://sjh9708.tistory.com/174)
+dns-01 http-01 차이, 그리고 txt record?
+spring page 개념
+
 ### 📆 240920 (금)
 <details>
 <summary>내용 보기 / 접기</summary>
@@ -28,4 +41,9 @@
   - 프론트엔드에서의 CORS 설정
   - 백엔드에서의 CORS 설정
 
+#### ✅ 오픈소스 git clone vs wget
+
 </details>
+
+
+
